# mujoco_ros_plugin_template

./: CMakeLists.txt  LICENSE  README.md  package.xml  plugin_template.xml  setup.py
config/: template_example_config.yaml
include/mujoco_ros_plugin_template/: plugin_template.h
launch/: plugin_template_example.launch  plugin_template_example_py.launch
python/: CMakeLists.txt  mj_ros_template_py.cpp
python/bindings/src/: pymj_ros_template.cpp
python/src/mujoco_ros_template/: __init__.py
scripts/: mj_ros.py
src/: main.cpp
