<?xml version="1.0"?>
<package format="2">
  <name>mujoco_ros_plugin_template</name>
  <version>0.0.0</version>
  <description>MuJoCo ROS Plugin Template</description>


  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>
  <author>David Leins</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pybind11_catkin</depend>
  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>mujoco_ros</depend>

  <export>
    <mujoco_ros plugin="${prefix}/plugin_template.xml" />
  </export>
</package>